[tool.poetry]
name = "track"
version = "0.1.0"
description = "A toggl Track personal CLI"
authors = ["Ulises Santana <ulisesantana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-instafail = "^0.5.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
