[tool.poetry]
name = "track"
version = "0.1.0"
description = "A toggl Track personal CLI"
authors = ["Ulises Santana <ulisesantana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
click = "^8.1.3"
requests = "^2.28.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-instafail = "^0.5.0"

[tool.poetry.scripts]
track = "track.track:track"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
